bgo1-test/uit-web-test/drupal-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: drupal
spec:
  replicas: 1
  selector:
    matchLabels:
      app: drupal
  template:
    metadata:
      labels:
        app: drupal
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 33
        runAsGroup: 33
        fsGroup: 33
      containers:
      - name: drupal
        image: uitcontainerregistry.azurecr.io/uit/drupal:11.3-0055
        volumeMounts: 
          - name: settings-php
            mountPath: /var/www/html/web/sites/default/settings.php
            subPath: settings.php
          - name: drupal-default-files-test
            mountPath: /var/www/html/web/sites/default/files          
        ports:
          - containerPort: 9000        
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          runAsNonRoot: true
          seccompProfile:
            type:
              RuntimeDefault
      volumes: 
        - name: settings-php
          configMap:
            name: settings-php
        - name: drupal-default-files-test
          persistentVolumeClaim: 
            claimName: drupal-default-files-test
      imagePullSecrets:
      - name: ${image_pull_secret_name}
