bgo1-test/uit-web-test/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 82
        runAsGroup: 82
        fsGroup: 82
      containers:
      - name: nginx
        image: uitcontainerregistry.azurecr.io/uit/nginx-drupal:11.3-0064
        volumeMounts: 
          - name: drupal-default-files-test
            mountPath: /var/www/html/web/sites/default/files
        ports:
        - containerPort: 8080
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          runAsNonRoot: true
          seccompProfile:
            type:
              RuntimeDefault
      volumes: 
        - name: drupal-default-files-test
          persistentVolumeClaim: 
            claimName: drupal-default-files-test
      imagePullSecrets:
      - name: ${image_pull_secret_name}
